-
Bug
-
Resolution: Done
-
P2: Important
-
6.3
-
None
-
-
9e3d449925 (qt/qtmultimedia/dev) b74c3301e8 (qt/qtmultimedia/6.2) 15d925b561 (qt/qtmultimedia/6.3) b74c3301e8 (qt/tqtc-qtmultimedia/6.2)
25: FAIL! : tst_QMediaPlayerBackend::seekPauseSeek() 'surface->m_frameList.isEmpty()' returned FALSE. ()
25: Loc: [/Users/Samuel/Desktop/Qt/qt5/qtmultimedia/tests/auto/integration/qmediaplayerbackend/tst_qmediaplayerbackend.cpp(790)]
- resulted from
-
QTBUG-99096 Android tst_qmediaplayerbackend test failed
-
- Closed
-
- resulted in
-
QTBUG-102029 Android camera preview broken in Qt 6.2.4 (regression)
-
- Closed
-