Fix SeekPauseSeek Test in Android

Changed android backend to only send frames when
the correct states. This will prevent sending frames
on Prepared which made this test to fail.

Fixes: QTBUG-99357
Pick-to: 6.2 6.3
Change-Id: I53f26daf2c5340ce3ab02de5a4d4925b05c215aa
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>